# ZENO-Agent

./: .gitignore  ARCHITECTURE.md  README.md  STACK.md  ZENO_PRD.docx  gen_grammar.js  pyproject.toml  requirements-dev.txt  requirements.txt  zeno_schema.sql
.gsd/: ROADMAP.md  SPEC.md  STATE.md
.gsd/phases/1/: 1-PLAN.md  1-SUMMARY.md  2-PLAN.md  3-PLAN.md  RESEARCH.md
.gsd/phases/2/: 1-PLAN.md  2-PLAN.md  3-PLAN.md  RESEARCH.md
scripts/: create_config.py  init_db.py
templates/: config.yaml.template
tests/voice/: test_capture.py  test_hotkeys.py  test_transcriber.py  test_wake_word.py
zeno/: __init__.py  __main__.py  config.py  db.py
zeno/ai/: __init__.py
zeno/dispatcher/: __init__.py
zeno/handlers/: __init__.py
zeno/macros/: __init__.py
zeno/monitor/: __init__.py
zeno/nlp/: __init__.py
zeno/scheduler/: __init__.py
zeno/tts/: __init__.py
zeno/voice/: __init__.py  capture.py  hotkeys.py  transcriber.py  wake_word.py
